{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 57,
  "lineage": "edadc598-337b-3d72-fe3c-6fe63d50c273",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kubernetes_Servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0851b76e8b1bce90b",
            "arn": "arn:aws:ec2:ap-south-1:872612006826:instance/i-0e02316a2ba049a16",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e02316a2ba049a16",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "devops dec-2021",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-027ef984aa471c01f",
            "private_dns": "ip-172-0-0-75.ap-south-1.compute.internal",
            "private_ip": "172.0.0.75",
            "public_ip": "65.1.114.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-078d207a8ae510e4b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011718b7cac2d5c88",
            "tags": {
              "Name": "Kubernetes_Servers",
              "Type": "Kubernetes_Master"
            },
            "tags_all": {
              "Name": "Kubernetes_Servers",
              "Type": "Kubernetes_Master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0716e5bbfb15301c3"
            ]
          },
          "dependencies": [
            "aws_security_group.kubernetes_sg",
            "aws_subnet.kubernetes_subnets",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kubernetes_Workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0851b76e8b1bce90b",
            "arn": "arn:aws:ec2:ap-south-1:872612006826:instance/i-0917123986e74780d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0917123986e74780d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops dec-2021",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02fb06dfe51bd1a3a",
            "private_dns": "ip-172-0-0-74.ap-south-1.compute.internal",
            "private_ip": "172.0.0.74",
            "public_ip": "3.111.171.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-003ba44f1fb459926",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011718b7cac2d5c88",
            "tags": {
              "Name": "Kubernetes_Servers",
              "Type": "Kubernetes_Worker"
            },
            "tags_all": {
              "Name": "Kubernetes_Servers",
              "Type": "Kubernetes_Worker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0716e5bbfb15301c3"
            ]
          },
          "dependencies": [
            "aws_security_group.kubernetes_sg",
            "aws_subnet.kubernetes_subnets",
            "aws_vpc.kubernetes"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0851b76e8b1bce90b",
            "arn": "arn:aws:ec2:ap-south-1:872612006826:instance/i-08edee95d0f0894d2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08edee95d0f0894d2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops dec-2021",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0093f8a6eeed6a003",
            "private_dns": "ip-172-0-0-215.ap-south-1.compute.internal",
            "private_ip": "172.0.0.215",
            "public_ip": "3.109.56.212",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-065e52c6456d49588",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-039eb24eaff810fdd",
            "tags": {
              "Name": "Kubernetes_Servers",
              "Type": "Kubernetes_Worker"
            },
            "tags_all": {
              "Name": "Kubernetes_Servers",
              "Type": "Kubernetes_Worker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0716e5bbfb15301c3"
            ]
          },
          "dependencies": [
            "aws_security_group.kubernetes_sg",
            "aws_subnet.kubernetes_subnets",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kubernetes_vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:872612006826:internet-gateway/igw-06c4c7153768e07da",
            "id": "igw-06c4c7153768e07da",
            "owner_id": "872612006826",
            "tags": {
              "Name": "kubernetes_vpc_igw"
            },
            "tags_all": {
              "Name": "kubernetes_vpc_igw"
            },
            "vpc_id": "vpc-0520d14f47d18b0ee"
          },
          "dependencies": [
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kubernetes_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:872612006826:route-table/rtb-02a744922abee184b",
            "id": "rtb-02a744922abee184b",
            "owner_id": "872612006826",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06c4c7153768e07da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kubernetes_vpc_public_rt"
            },
            "tags_all": {
              "Name": "kubernetes_vpc_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0520d14f47d18b0ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.kubernetes_vpc_igw",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_sub_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ed7a8769f819e19",
            "route_table_id": "rtb-02a744922abee184b",
            "subnet_id": "subnet-011718b7cac2d5c88"
          },
          "dependencies": [
            "aws_internet_gateway.kubernetes_vpc_igw",
            "aws_route_table.kubernetes_public_rt",
            "aws_subnet.kubernetes_subnets",
            "aws_vpc.kubernetes"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f93f7b5f6f32cf9",
            "route_table_id": "rtb-02a744922abee184b",
            "subnet_id": "subnet-039eb24eaff810fdd"
          },
          "dependencies": [
            "aws_internet_gateway.kubernetes_vpc_igw",
            "aws_route_table.kubernetes_public_rt",
            "aws_subnet.kubernetes_subnets",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubernetes_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:872612006826:security-group/sg-0716e5bbfb15301c3",
            "description": "Allow All Ports All Protocals",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0716e5bbfb15301c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Allow_All_Ports",
            "name_prefix": "",
            "owner_id": "872612006826",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0520d14f47d18b0ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kubernetes_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:872612006826:subnet/subnet-011718b7cac2d5c88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.0.0.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011718b7cac2d5c88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "872612006826",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kubernetes_subnets_1"
            },
            "tags_all": {
              "Name": "kubernetes_subnets_1"
            },
            "vpc_id": "vpc-0520d14f47d18b0ee"
          },
          "dependencies": [
            "aws_vpc.kubernetes"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:872612006826:subnet/subnet-039eb24eaff810fdd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.0.0.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039eb24eaff810fdd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "872612006826",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kubernetes_subnets_2"
            },
            "tags_all": {
              "Name": "kubernetes_subnets_2"
            },
            "vpc_id": "vpc-0520d14f47d18b0ee"
          },
          "dependencies": [
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kubernetes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:872612006826:vpc/vpc-0520d14f47d18b0ee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.0.0.0/24",
            "default_network_acl_id": "acl-0396d9c0b9e347e8a",
            "default_route_table_id": "rtb-02e2b988abb7c3215",
            "default_security_group_id": "sg-01d8b745325d1cce5",
            "dhcp_options_id": "dopt-0e9588ccbc33b5f51",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0520d14f47d18b0ee",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02e2b988abb7c3215",
            "owner_id": "872612006826",
            "tags": {
              "Name": "kubernetes"
            },
            "tags_all": {
              "Name": "kubernetes"
            }
          }
        }
      ]
    }
  ]
}